--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,6 @@
       </form>
       <div class="playlist"></div>
     </div>
-    <script src="static/bundle.js"></script>
+    <script src="public/bundle.js"></script>
   </body>
 </html>
